use InChIKey rather than SMILES to search PubChem retrieve CID as well as IUPAC name skip chemicals with 2 more more InChIKeys